[package]
name = "ohdlc"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = { version = "0.4.0", features = ["auto-color"] }
bumpalo = { version = "3.14.0", features = ["collections"] }
deref-derive = "0.1.0"
lasso = { version = "0.7.2", features = ["multi-threaded"] }
logos = "0.13.0"
once_cell = "1.19.0"
surotto = { git = "https://github.com/DasLixou/surotto" }
